--- a/Howtouse.html
+++ b/Howtouse.html
@@ -21,11 +21,11 @@
             <p>- There Is Multiple Ways You Can Invite Synth To Your Server. Here Are The Instructions.</p>
             <p>- How To Invite Synth With A Link, If Synth Is Online You Can Just Do <strong>s!invite.</strong></p>
             <p>- How To Invite Synth With A Simple Click (three steps) First Step Is To Click On Synth In Your Server Or A Server That Has Synth.</p>
-            <img src="images/invitesynth.png">
+            <img src="invitesynth.png">
             <p>- Second Step, Make Sure This Screen Pops Up.</p>
-            <img src="images/invitesynth2.png">
+            <img src="invitesynth2.png">
             <p>- Third Step, Click The Add To Server Button.</p>
-            <img src="images/invitesynth3.png">
+            <img src="invitesynth3.png">
             <p>- Those Are All The Steps You Need To Know To Know How To Invite Synth To Your Server.</p>
                     <button class="button">
                         <strong>Did You Know That?</strong>
@@ -34,7 +34,7 @@
                         <div>
                         He Said This When The Bot Started Its Coding.</div>
                         <div>
-                        <img src="images/terrencedance.gif">
+                        <img src="terrencedance.gif">
                         </div>
                     </button>
         </section>
@@ -44,9 +44,6 @@
             <ul class="nav-bottom">
                 <div>
                 <a href="https://discord.gg/XD5bP9t7Mk"><img src="images/945946580194820138.png" width="24" height="24">
-                </div>
-                <div>
-                <a href=" https://github.com/pianoidoll/Synth-/find/main"><img src="images/923308881550114897.png" width="22" height="22">
                 </div>
             </ul>
         </footer>    
