--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <section>
             <h2>- How Synth Started</h2>
             <p>- One Day, The Creator Of Synth Was Bored (He Had Covid At This Time) So He Went On Youtube And Asked "how make bot" And A FCC/Free Code Camp Vid Popped Up, He Started There, Although He Didnt Finish..</p>
-            <img src="images/Synth.jpg">
+            <img src="Synth.jpg">
             <p>- His Friend Asked If He Needed Help, He Said "NO" And Started Coding More, Later On That Week He Started Having Trouble With The Bot That Started Out With The Name, "Pedal" And So He Asked A Guy Named 'ayes' And Ayes Invited Him To a Discord GC And Now Synth Is Here. "Even The Smallest Bit Of Help Can Do Alot"- Synths Creator</p>
             <p>- Following Through The Life Of Synth, He Had A Bot Buddy AKA Troller Bot 2000, A Bot Coded By The Same Guy That Made Synth, But All It Does Is Troll.</p>
             <h2>- More About Synth</h2>
@@ -31,7 +31,7 @@
                         <div>
                         Everyone Knew That Was A Horrible Idea</div>
                         <div>
-                        <img src="images/Remove background.png"></a>
+                        <img src="Remove background.png"></a>
                         </div>
                     </button>
                     <p>- Synth Does Have Some Issues Here And There But If There Is Any Issues Just Ping <strong>@Terrence#6960</strong> In <strong>#🔎・help-and-info</strong> In <strong>Synths Lab,</strong> The Main Support Server For Synth.</p>
@@ -41,7 +41,7 @@
             <h4>- Socials</h4>
             <ul class="nav-bottom">
                 <div>
-                <a href="https://discord.gg/XD5bP9t7Mk"><img src="images/945946580194820138.png" width="24" height="24">
+                <a href="https://discord.gg/XD5bP9t7Mk"><img src="945946580194820138.png" width="24" height="24">
                 </div>
                 
             </ul>
