--- a/Howtouse.html
+++ b/Howtouse.html
@@ -11,7 +11,7 @@
                 <ul>
                     </a><h3><li><a href="about.html">About</a></li></h3>
                     </a><h3><li><a href="Howtouse.html">How To Use</a></li></h3>
-                    </a><h3><li><a href="synthstartpage.html">Other Selections</a></li></h3>
+                    </a><h3><li><a href="index.html">Other Selections</a></li></h3>
                 </ul>
             </nav>
             <h1><strong>- How To Use Synth</strong></h1>    
@@ -43,7 +43,7 @@
             <h4>- Socials</h4>
             <ul class="nav-bottom">
                 <div>
-                <a href="https://discord.gg/XD5bP9t7Mk"><img src="images/945946580194820138.png" width="24" height="24">
+                <a href="https://discord.gg/XD5bP9t7Mk"><img src="945946580194820138.png" width="24" height="24">
                 </div>
             </ul>
         </footer>    
