--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <title>Where Would You Like To Go?</title>
+        <title>Where Would You Like To Go?<img src="Synth.jpg"></title>
         <meta name="description" content="Stating page for synth">
         <link rel="stylesheet" href="stylesynth.css" />
     </head>
