--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <title>Where Would You Like To Go?</title><img src="Synth.jpg">
+        <title>Where Would You Like To Go?</title>
         <meta name="description" content="Stating page for synth">
         <link rel="stylesheet" href="stylesynth.css" />
     </head>
@@ -15,4 +15,5 @@
                 </ul>
             </nav>
             <h1 class="h1text">Select Where You Would Like To Go</h1>
+            <img src="Synth.jpg">
         </header>
