--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>  
         <title>Where Would You Like To Go?</title>
-        <meta name="description" content="Stating page for synth">
-        <link rel="stylesheet" href="stylesynth.css" />
+        <meta name="" content="">
+        <link rel="stylesheet" href="styling.css" />
     </head>
     <body>
         <header class="main-header">
