--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
         <header class="main-header">
             <nav class="nav main-nav">
                 <ul>
-                   <h3><li><a href="about.html">About Synth</a></li></h3>
-                   <h3><li><a href="Howtouse.html">How To Use</a></li></h3>
-                   <h3><li><a href="https://discord.gg/XD5bP9t7Mk">Discord</a></li></h3>
+                   <h3><li><a href="synthstarting.html">Synth Discord Bot</a></li></h3>
+                   <h3><li><a href="gamingproducts.html">Gaming Page</a></li></h3>
+                   <h3><li><a>Scroll Down For Discords</a></li></h3>
                 </ul>
             </nav>
             <h1 class="h1text">Select Where You Would Like To Go</h1>
         </header>
+        <footer>
+            <h3><li><a href="https://discord.gg/hRpAcKmEPR">Discord: Random</a></li></h3>
+            <h3><li><a href="https://discord.gg/r8BdRqCCSr">Discord: Musicord</a></li></h3>
+        </footer>
+        
