--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </nav>
             <h1 class="h1text">Select Where You Would Like To Go</h1>
         </header>
-        <footer class="footer">
+        <footer class="main-footer">
             <h3><li><a href="https://discord.gg/hRpAcKmEPR">Discord: Random</a></li></h3>
             <h3><li><a href="https://discord.gg/r8BdRqCCSr">Discord: Musicord</a></li></h3>
         </footer>
