--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1 class="h1text">Select Where You Would Like To Go</h1>
         </header>
         <footer class="main-footer">
-        <ul>
+        <ul class="nav-bottom">
             <h3><li><a href="https://discord.gg/hRpAcKmEPR">Discord: Random</a></li></h3>
             <h3><li><a href="https://discord.gg/r8BdRqCCSr">Discord: Musicord</a></li></h3>
         </ul>
