--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
                 <ul>
                    <h3><li><a href="synthstarting.html">Synth Discord Bot</a></li></h3>
                    <h3><li><a href="gamingproducts.html">Gaming Page</a></li></h3>
-                   <h3><li><a>Scroll Down For Discords</a></li></h3>
+                   <h3><li><a href="https://discord.gg/hRpAcKmEPR">discord</a></li></h3>
                 </ul>
             </nav>
             <h1 class="h1text">Select Where You Would Like To Go</h1>
         </header>
-        <footer class="main-footer">
-        <ul class="nav-bottom">
-            <h3><li><a href="https://discord.gg/hRpAcKmEPR">Discord: Random</a></li></h3>
-            <h3><li><a href="https://discord.gg/r8BdRqCCSr">Discord: Musicord</a></li></h3>
-        </ul>
-        </footer>
+        
         
