--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <ul>
                    <h3><li><a href="synthstarting.html">Synth Discord Bot</a></li></h3>
                    <h3><li><a href="gamingproducts.html">Gaming Page</a></li></h3>
-                   <h3><li><a href="https://discord.gg/hRpAcKmEPR">discord</a></li></h3>
+                   <h3><li><a href="https://discord.gg/hRpAcKmEPR">Join The Discord</a></li></h3>
                 </ul>
             </nav>
             <h1 class="h1text">Select Where You Would Like To Go</h1>
