--- a/gamingproducts.html
+++ b/gamingproducts.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <title>Synth About</title>
-        <meta name="description" content="Synths About Page">
-        <link rel="stylesheet" href="stylesynth.css" />
+        <title>Gaming Products</title>
+        <meta name="description" content="">
+        <link rel="stylesheet" href="styling.css" />
     </head>
     <body>
         <header class="main-header">
