--- a/gamingproducts.html
+++ b/gamingproducts.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <header class="main-header">
-            <nav class="nav main-nav-">
+            <nav class="nav main-nav">
                 <ul>
-                  <h5><a href="index.html">⬅</a></h5>
+                  <h5><a href="index.html">Back</a></h5>
                 </ul>
             </nav>
             <h1></h1>    
