--- a/gamingproducts.html
+++ b/gamingproducts.html
@@ -10,9 +10,10 @@
             <nav class="nav main-nav">
                 <ul>
                   <h5 class="main-h5"><a href="index.html">Back</a></h5>
+                  <h5 class="main-h5"><a href="https://discord.gg/hRpAcKmEPR">Discord</a></h5>
                 </ul>
             </nav>
-            <h1></h1>    
+            <h1>Cheap Gaming Equipment That Are Decent</h1>    
         </header>
         <section>
         </section>
