--- a/gamingproducts.html
+++ b/gamingproducts.html
@@ -2,7 +2,7 @@
 <html>
     <head>  
         <title>Gaming Products</title>
-        <meta name="description" content="">
+        <meta name="description" content="Gaming Products That Are Decent And Cheap">
         <link rel="stylesheet" href="styling.css" />
     </head>
     <body>
@@ -16,6 +16,12 @@
             <h1>Cheap Gaming Equipment That Are Decent</h1>    
         </header>
         <section>
+            <h2>ZIYOULANG Keyboard And Mouse Set</h2>
+            <hr>
+            <p>The ZIYOULANG Keyboard And Mouse Set Is About 60-70% Keyboard Made For Gaming, Its Amazingly Quiet And Has Some Cool Little Features To It.</p>
+            <p>Once You Buy This It Comes With A Manual, Its A UK Layout Keyboard, And For Making it Light Up Different (only has 3 modes: rainbow color, rainbow color breathe, off) If You Do FN + Scroll Lock, It Changes Modes, For The Mouse You Click The Button At The Bottom</p>
+            <h3><a href="https://www.amazon.com/dp/B09GDSQ7VT/ref=twister_B09H41J7BC?_encoding=UTF8&th=1">Click To Go To The Link</a></h5>
+            <hr>
         </section>
         <footer>
             </ul>
