--- a/gamingproducts.html
+++ b/gamingproducts.html
@@ -10,6 +10,7 @@
             <nav class="nav main-nav">
                 <ul>
                   <h5 class="main-h5"><a href="index.html">Back</a></h5>
+                  <h5 class="main-h5"><a href="gamingproducts2.html">Next Page</a></h5>
                   <h5 class="main-h5"><a href="https://discord.gg/hRpAcKmEPR">Discord</a></h5>
                 </ul>
             </nav>
