--- a/gamingproducts.html
+++ b/gamingproducts.html
@@ -26,7 +26,7 @@
             <hr class="hr">
             <h2>TECNII 24" Inch Monitor</h2>
             <hr class="hr">
-            <p>People Say This Is A Good Monitor For Gaming At 24 Inches To Play Your Favourite Video Games On, The Stats On The Product Say "1920 x 1080p Resolution 75Hz 5ms" And Is Good For Lots Of Games Since Alot Of Monitors That Size Run At 60Hz, This ONly Costs Around $180 Canadian Dollars Since Its Not On .com, Lots Of People Would Recommend This Montior For The Resolution And Hz But Its A Little Bit Small.
+            <p>People Say This Is A Good Monitor For Gaming At 24 Inches To Play Your Favourite Video Games On, The Stats On The Product Say "1920 x 1080p Resolution 75Hz 5ms" And Is Good For Lots Of Games Since Alot Of Monitors That Size Run At 60Hz, This Only Costs Around $180 Canadian Dollars Since Its Not On .com, Lots Of People Would Recommend This Montior For The Resolution And Hz But Its A Little Bit Small.
             <h3><a href="https://www.amazon.ca/TECNII-Inch-Monitor-Widescreen-Resolution/dp/B09P5KZ4GV/ref=pd_sbs_6/142-3383381-5937222?pd_rd_w=RiuXQ&pf_rd_p=5e3de09f-c23c-4218-88f9-a2511d573f0c&pf_rd_r=TM7REF3T14N1X6YZFH1A&pd_rd_r=7546d856-3172-455b-aef4-02396b129788&pd_rd_wg=42Ztr&pd_rd_i=B09P5KZ4GV&psc=1">Click To Go To Link</a></h3>       
         </section>
         <footer>
