--- a/gamingproducts2.html
+++ b/gamingproducts2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <title>Gaming Products</title>
+        <title>Gaming Products: Headset</title>
         <meta name="description" content="Gaming Products That Are Decent And Cheap">
         <link rel="stylesheet" href="styling.css" />
     </head>
@@ -9,24 +9,22 @@
         <header class="main-header">
             <nav class="nav main-nav">
                 <ul>
-                  <h5 class="main-h5"><a href="index.html">Back</a></h5>
+                  <h5 class="main-h5"><a href="gamingproducts.html">Back</a></h5>
                   <h5 class="main-h5"><a href="https://discord.gg/hRpAcKmEPR">Discord</a></h5>
                 </ul>
             </nav>
-            <h1>Cheap Gaming Equipment That Are Decent</h1>  
+            <h1>Cheap Gaming Headset That Is Decent</h1>  
             <hr class="hr">
         </header>
         <section>
-            <h2>ZIYOULANG Keyboard And Mouse Set</h2>
-            <hr class="hr">
-            <p>The ZIYOULANG Keyboard And Mouse Set Is About 60-70% Keyboard Made For Gaming, Its Amazingly Quiet And Has Some Cool Little Features To It.</p>
-            <p>Once You Buy This It Comes With A Manual, Its A UK Layout Keyboard, And For Making it Light Up Different (only has 3 modes: rainbow color, rainbow color breathe, off) If You Do FN + Scroll Lock, It Changes Modes, For The Mouse You Click The Button At The Bottom</p>
-            <h3><a href="https://www.amazon.com/dp/B09GDSQ7VT/ref=twister_B09H41J7BC?_encoding=UTF8&th=1">Click To Go To The Link</a></h3>
-            <hr class="hr">
-            <h2>TECNII 24" Inch Monitor</h2>
-            <hr class="hr">
-            <p>People Say This Is A Good Monitor For Gaming At 24 Inches To Play Your Favourite Video Games On, The Stats On The Product Say "1920 x 1080p Resolution 75Hz 5ms" And Is Good For Lots Of Games Since Alot Of Monitors That Size Run At 60Hz, This ONly Costs Around $180 Canadian Dollars Since Its Not On .com, Lots Of People Would Recommend This Montior For The Resolution And Hz But Its A Little Bit Small.
-            <h3><a href="https://www.amazon.ca/TECNII-Inch-Monitor-Widescreen-Resolution/dp/B09P5KZ4GV/ref=pd_sbs_6/142-3383381-5937222?pd_rd_w=RiuXQ&pf_rd_p=5e3de09f-c23c-4218-88f9-a2511d573f0c&pf_rd_r=TM7REF3T14N1X6YZFH1A&pd_rd_r=7546d856-3172-455b-aef4-02396b129788&pd_rd_wg=42Ztr&pd_rd_i=B09P5KZ4GV&psc=1">Click To Go To Link</a></h3>       
+            <h2>NUBWO U3 Headset</h2>
+            <hr>
+            <p>This Headset Has A Great Mic, Its Very Durable, And It Sounds Amazing, This Headset Is Probably My Favourite Headset For Gaming.</p>
+            <p>It Looks Very Nice And The Price Is $41.30 CAD, And $16 USD, Very Cheap For Its Quality.</p>
+            <p>Lots And Lots Of Cheap Paying Gamers Really Recommend This Headset.</p>
+            <h3><a href="https://www.amazon.com/NUBWO-U3-Nintendo-Computer-Microphone/dp/B07K2676W7/ref=sr_1_9?gclid=CjwKCAjwuYWSBhByEiwAKd_n_jjFIHgJU81YasHcJgWBN25O732lLsDuUeBXlNF2riV_YpJo6w-qlRoCuGsQAvD_BwE&hvadid=208694284977&hvdev=c&hvlocphy=9001387&hvnetw=g&hvqmt=e&hvrand=4723641007443970577&hvtargid=kwd-353316845487&hydadcr=20844_9881416&keywords=nubwo&qid=1648532928&sr=8-9">Click To Go To Link USD</a></h3>
+            <h3><a href="https://www.amazon.ca/NUBWO-U3-Nintendo-Computer-Microphone/dp/B07K2676W7/ref=sr_1_9?gclid=CjwKCAjwuYWSBhByEiwAKd_n_jjFIHgJU81YasHcJgWBN25O732lLsDuUeBXlNF2riV_YpJo6w-qlRoCuGsQAvD_BwE&hvadid=208694284977&hvdev=c&hvlocphy=9001387&hvnetw=g&hvqmt=e&hvrand=4723641007443970577&hvtargid=kwd-353316845487&hydadcr=20844_9881416&keywords=nubwo&qid=1648532928&sr=8-9">Click To Go To Link CAD</a></h3>
+
         </section>
         <footer>
             
