--- a/gamingproducts2.html
+++ b/gamingproducts2.html
@@ -24,7 +24,13 @@
             <p>Lots And Lots Of Cheap Paying Gamers Really Recommend This Headset.</p>
             <h3><a href="https://www.amazon.com/NUBWO-U3-Nintendo-Computer-Microphone/dp/B07K2676W7/ref=sr_1_9?gclid=CjwKCAjwuYWSBhByEiwAKd_n_jjFIHgJU81YasHcJgWBN25O732lLsDuUeBXlNF2riV_YpJo6w-qlRoCuGsQAvD_BwE&hvadid=208694284977&hvdev=c&hvlocphy=9001387&hvnetw=g&hvqmt=e&hvrand=4723641007443970577&hvtargid=kwd-353316845487&hydadcr=20844_9881416&keywords=nubwo&qid=1648532928&sr=8-9">Click To Go To Link USD</a></h3>
             <h3><a href="https://www.amazon.ca/NUBWO-U3-Nintendo-Computer-Microphone/dp/B07K2676W7/ref=sr_1_9?gclid=CjwKCAjwuYWSBhByEiwAKd_n_jjFIHgJU81YasHcJgWBN25O732lLsDuUeBXlNF2riV_YpJo6w-qlRoCuGsQAvD_BwE&hvadid=208694284977&hvdev=c&hvlocphy=9001387&hvnetw=g&hvqmt=e&hvrand=4723641007443970577&hvtargid=kwd-353316845487&hydadcr=20844_9881416&keywords=nubwo&qid=1648532928&sr=8-9">Click To Go To Link CAD</a></h3>
-
+            <hr>
+            <h2>Razer Kraken X Ultralight Gaming Headset</h2>
+            <hr>
+            <p>Lots Of Streamers Use This Headset, USD Is Very Ok At $49.99, But CAD Is $69.99.
+            <p>Big Price Difference, This Is A Very Good Headset With 7.1 Surround Sound, And Is Compatible With PC, PS4, PS5, Switch, Xbox One, Xbox Series X & S.
+            <h3><a href="https://www.amazon.ca/Razer-Kraken-Ultralight-Gaming-Headset/dp/B07RMC5BRL/ref=asc_df_B07RMSM477/?tag=googleshopc0c-20&linkCode=df0&hvadid=335153620545&hvpos=&hvnetw=g&hvrand=12257753250925041608&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9001387&hvtargid=pla-793274876765&th=1">Click To Go To Link CAD</a></h3>
+            <h3><a href="https://www.amazon.com/Razer-Kraken-Ultralight-Gaming-Headset/dp/B07RMC5BRL/ref=asc_df_B07RMSM477/?tag=googleshopc0c-20&linkCode=df0&hvadid=335153620545&hvpos=&hvnetw=g&hvrand=12257753250925041608&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9001387&hvtargid=pla-793274876765&th=1">Click To Go To Link USD</a></h3>
         </section>
         <footer>
             
