--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
                 <ul>
                     </a><h3><li><a href="about.html">About</a></li></h3>
                     </a><h3><li><a href="Howtouse.html">How To Use</a></li></h3>
-                    </a><h3><li><a href="index.html">Other Selections</a></li></h3>
+                    </a><h3><li><a href="synthstarting.html">Other Selections</a></li></h3>
                 </ul>
             </nav>
             <h1>- Synth Stuff</h1>    
