--- a/Howtouse.html
+++ b/Howtouse.html
@@ -43,6 +43,7 @@
             <ul class="nav-bottom">
                 <div>
                 <a href="https://discord.gg/XD5bP9t7Mk"><img src="945946580194820138.png" width="24" height="24">
+                <a href="https://trinket.io/features/pygame"><img src="blockfall.png" width="24" height="24">
                 </div>
             </ul>
         </footer>    
