--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
     <head>  
         <title>How To Use Game And Setup Game</title>
         <meta name="description" content="">
-        <link rel="stylesheet" href="stylesynth.css" />
+        <link rel="stylesheet" href="styling.css" />
     </head>
     <body>
         <header class="main-header">
