--- a/game.html
+++ b/game.html
@@ -15,133 +15,134 @@
             <h1>Copy And Paste The Code Below Then Click The Image At The Bottom Of The Screen And Delete The Code Thats There And Paste The Code That Is Here</h1>    
         </header>
         <section>
-          <p>import html
-import pygame
-import random
-import sys
-
-pygame.init()
-
-WIDTH = 1370
-HEIGHT = 700
-
-RED = (255,0,0)
-BLUE = (0,0,255)
-YELLOW = (255,255,0)
-BACKGROUND_COLOR = (0,0,0)
-
-player_size = 50
-player_pos = [WIDTH/2, HEIGHT-2*player_size]
-
-enemy_size = 50
-enemy_pos = [random.randint(0,WIDTH-enemy_size), 0]
-enemy_list = [enemy_pos]
-
-SPEED = 10
-
-screen = pygame.display.set_mode((WIDTH, HEIGHT))
-
-score = 0
-
-game_over = False
-
-clock = pygame.time.Clock()
-
-myFont = pygame.font.SysFont("monospace", 35)
-
-def set_level(score, SPEED):
-	if score < 20:
-		SPEED = 5
-	elif score < 40:
-		SPEED = 8
-	elif score < 60:
-		SPEED = 12
-	else:
-		SPEED = 15
-	return SPEED
-	# SPEED = score/5 + 1
-
-
-def drop_enemies(enemy_list):
-	delay = random.random()
-	if len(enemy_list) < 10 and delay < 0.1:
-		x_pos = random.randint(0,WIDTH-enemy_size)
-		y_pos = 0
-		enemy_list.append([x_pos, y_pos])
-
-def draw_enemies(enemy_list):
-	for enemy_pos in enemy_list:
-		pygame.draw.rect(screen, BLUE, (enemy_pos[0], enemy_pos[1], enemy_size, enemy_size))
-
-def update_enemy_positions(enemy_list, score):
-	for idx, enemy_pos in enumerate(enemy_list):
-		if enemy_pos[1] >= 0 and enemy_pos[1] < HEIGHT:
-			enemy_pos[1] += SPEED
-		else:
-			enemy_list.pop(idx)
-			score += 1
-	return score
-
-def collision_check(enemy_list, player_pos):
-	for enemy_pos in enemy_list:
-		if detect_collision(enemy_pos, player_pos):
-			return True
-	return False
-
-def detect_collision(player_pos, enemy_pos):
-	p_x = player_pos[0]
-	p_y = player_pos[1]
-
-	e_x = enemy_pos[0]
-	e_y = enemy_pos[1]
-
-	if (e_x >= p_x and e_x < (p_x + player_size)) or (p_x >= e_x and p_x < (e_x+enemy_size)):
-		if (e_y >= p_y and e_y < (p_y + player_size)) or (p_y >= e_y and p_y < (e_y+enemy_size)):
-			return True
-	return False
-
-while not game_over:
-
-	for event in pygame.event.get():
-		if event.type == pygame.QUIT:
-			sys.exit()
-
-		if event.type == pygame.KEYDOWN:
-
-			x = player_pos[0]
-			y = player_pos[1]
-
-			if event.key == pygame.K_LEFT:
-				x -= player_size
-			elif event.key == pygame.K_RIGHT:
-				x += player_size
-
-			player_pos = [x,y]
-
-	screen.fill(BACKGROUND_COLOR)
-
-	drop_enemies(enemy_list)
-	score = update_enemy_positions(enemy_list, score)
-	SPEED = set_level(score, SPEED)
-
-	text = "Score:" + str(score)
-	label = myFont.render(text, 1, YELLOW)
-	screen.blit(label, (WIDTH-200, HEIGHT-40))
-
-	if collision_check(enemy_list, player_pos):
-		game_over = True
-		break 
-    
-
-	draw_enemies(enemy_list)
-
-	pygame.draw.rect(screen, RED, (player_pos[0], player_pos[1], player_size, player_size))
-
-	clock.tick(30)
-
-
-	pygame.display.update()
-print(f'Game Over: Score={score}')
-          </p>
-
-<a href="https://trinket.io/features/pygame"><img src="blockfall.png" width="24" height="24">
+		<p>import html</p>
+		<p>import pygame</p>
+		<p>import random</p>
+<p>import sys</p>
+<p></p>
+<p>pygame.init()</p>
+<p></p>
+<p>WIDTH = 1370</p>
+<p>HEIGHT = 700</p>
+<p><p></p>
+<p>RED = (255,0,0)</p>
+<p>BLUE = (0,0,255)</p>
+<p>YELLOW = (255,255,0)</p>
+<p>BACKGROUND_COLOR = (0,0,0)</p>
+<p></p>
+<p>player_size = 50</p>
+<p>player_pos = [WIDTH/2, HEIGHT-2*player_size]</p>
+<p></p>
+<p>enemy_size = 50</p>
+<p>enemy_pos = [random.randint(0,WIDTH-enemy_size), 0]</p>
+<p>enemy_list = [enemy_pos]</p>
+<p></p>
+<p>SPEED = 10</p>
+<p></p>
+<p>screen = pygame.display.set_mode((WIDTH, HEIGHT))</p>
+<p></p>
+<p>score = 0</p>
+<p></p>
+<p>game_over = False</p>
+<p></p>
+<p>clock = pygame.time.Clock()</p>
+<p></p>
+<p>myFont = pygame.font.SysFont("monospace", 35)</p>
+<p></p>
+<p>def set_level(score, SPEED):</p>
+<p>	if score < 20:</p>
+<p>		SPEED = 5</p>
+<p>	elif score < 40:</p>
+<p>		SPEED = 8</p>
+<p>	elif score < 60:</p>
+<p>		SPEED = 12</p>
+<p>	else:</p>
+<p>		SPEED = 15</p>
+<p>	return SPEED</p>
+<p>	# SPEED = score/5 + 1</p>
+<p></p>
+<p></p>
+<p>def drop_enemies(enemy_list):</p>
+<p>	delay = random.random()</p>
+<p>	if len(enemy_list) < 10 and delay < 0.1:</p>
+<p>		x_pos = random.randint(0,WIDTH-enemy_size)</p>
+<p>		y_pos = 0</p>
+<p>		enemy_list.append([x_pos, y_pos])</p>
+<p></p>
+<p>def draw_enemies(enemy_list):</p>
+<p>	for enemy_pos in enemy_list:</p>
+<p>		pygame.draw.rect(screen, BLUE, (enemy_pos[0], enemy_pos[1], enemy_size, enemy_size))</p>
+<p></p>
+<p>def update_enemy_positions(enemy_list, score):</p>
+<p>	for idx, enemy_pos in enumerate(enemy_list):</p>
+<p>		if enemy_pos[1] >= 0 and enemy_pos[1] < HEIGHT:</p>
+<p>			enemy_pos[1] += SPEED</p>
+<p>		else:</p>
+<p>			enemy_list.pop(idx)</p>
+<p>			score += 1</p>
+<p>	return score</p>
+<p></p>
+<p>def collision_check(enemy_list, player_pos):</p>
+<p>	for enemy_pos in enemy_list:</p>
+<p>		if detect_collision(enemy_pos, player_pos):</p>
+<p>			return True</p>
+<p>	return False</p>
+<p></p>
+<p>def detect_collision(player_pos, enemy_pos):</p>
+<p>	p_x = player_pos[0]</p>
+<p>	p_y = player_pos[1]</p>
+<p></p>
+<p>	e_x = enemy_pos[0]</p>
+<p>	e_y = enemy_pos[1]</p>
+<p></p>
+<p>	if (e_x >= p_x and e_x < (p_x + player_size)) or (p_x >= e_x and p_x < (e_x+enemy_size)):</p>
+<p>		if (e_y >= p_y and e_y < (p_y + player_size)) or (p_y >= e_y and p_y < (e_y+enemy_size)):</p>
+<p>			return True</p>
+<p>	return False</p>
+<p></p>
+<p>while not game_over:</p>
+<p></p>
+<p>	for event in pygame.event.get():</p>
+<p>		if event.type == pygame.QUIT:</p>
+<p>			sys.exit()</p>
+<p></p>
+<p>		if event.type == pygame.KEYDOWN:</p>
+<p></p>
+<p>			x = player_pos[0]</p>
+<p>			y = player_pos[1]</p>
+<p></p>
+<p>			if event.key == pygame.K_LEFT:</p>
+<p>				x -= player_size</p>
+<p>			elif event.key == pygame.K_RIGHT:</p>
+<p>				x += player_size</p>
+<p></p>
+<p>			player_pos = [x,y]</p>
+<p>
+<p>	screen.fill(BACKGROUND_COLOR)</p>
+<p></p>
+<p>	drop_enemies(enemy_list)</p>
+<p>	score = update_enemy_positions(enemy_list, score)</p>
+<p>	SPEED = set_level(score, SPEED)
+<p></p>
+<p>	text = "Score:" + str(score)</p>
+<p>	label = myFont.render(text, 1, YELLOW)</p>
+<p>	screen.blit(label, (WIDTH-200, HEIGHT-40))</p>
+<p></p>
+<p>	if collision_check(enemy_list, player_pos):</p>
+<p>		game_over = True</p>
+<p>		break </p></p>
+<p>    </p>
+<p></p>
+<p>	draw_enemies(enemy_list)</p>
+<p></p>
+<p>	pygame.draw.rect(screen, RED, (player_pos[0], player_pos[1], player_size, player_size))</p>
+<p></p>
+<p>	clock.tick(30)</p>
+<p></p>
+<p></p></p>
+<p>	pygame.display.update()</p></p>
+<p>print(f'Game Over: Score={score}')</p></p>
+<p>          </p>
+<p></p></p>
+<p><a href="https://trinket.io/features/pygame"><img src="blockfall.png" width="24" height="24">
+</p></p>
