--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <ul>
                    <h3><li><a href="synthstarting.html">Synth Discord Bot</a></li></h3>
                    <h3><li><a href="gamingproducts.html">Gaming Page</a></li></h3>
-                   <h3><li><a href="game.html">Block Fall Game</a></li></h3>
+                   <h3><li><a href="https://trinket.io/pygame">Block Fall Game</a></li></h3>
                    <h3><li><a href="https://discord.gg/hRpAcKmEPR">Join The Discord</a></li></h3>
                 </ul>
             </nav>
