--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>  
         <title>Where Would You Like To Go?</title>
-        <meta name="desription" content="Select The Place You Want To Browse">
+        <meta name="description" content="Select The Place You Want To Browse">
         <link rel="stylesheet" href="styling.css" />
     </head>
     <body>
