--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <title>Where Would You Like To Go?</title>
-        <meta name="description" content="Select The Place You Want To Browse">
+        <title>co-existent</title>
+        <meta name="description" content="Co-Existent Website", color=discord.Color.red>
         <link rel="stylesheet" href="styling.css" />
     </head>
     <body>
