--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>  
         <title>co-existent</title>
-        <meta name="description" content="Co-Existent Website", color=discord.Color.red>
+        <meta name="description" content="Co-Existent Website" img src="co-existent.png">
         <link rel="stylesheet" href="styling.css" />
     </head>
     <body>
