--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <title>co-existent</title>
+        <title>co-existent</title img src="co-existent.png">
         <meta name="description" content="Co-Existent Website" img src="co-existent.png">
         <link rel="stylesheet" href="styling.css" />
     </head>
