--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <title>co-existent</title img src="co-existent.png">
-        <meta name="description" content="Co-Existent Website" img src="co-existent.png">
+        <title>Co Ex || Co-Existent</title>
+        <meta name="description" content="Co-Existent Website">
+        <meta property="og:image" content="co-existent.png" />
         <link rel="stylesheet" href="styling.css" />
     </head>
     <body>
@@ -11,7 +12,6 @@
                 <ul>
                    <h3><li><a href="synthstarting.html">Synth Discord Bot</a></li></h3>
                    <h3><li><a href="gamingproducts.html">Gaming Page</a></li></h3>
-                   <h3><li><a href="https://trinket.io/pygame">Block Fall Game</a></li></h3>
                    <h3><li><a href="https://discord.gg/hRpAcKmEPR">Join The Discord</a></li></h3>
                 </ul>
             </nav>
