--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>  
         <title>Co Ex || Co-Existent</title>
         <meta name="description" content="Co-Existent Website">
-        <meta property="og:image" content="co-existent.png" />
+        <meta property="description" content="co-existent.png" />
         <link rel="stylesheet" href="styling.css" />
     </head>
     <body>
