--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>  
         <title>Co Ex || Co-Existent</title>
-        <meta name="description" content="Co-Existent Website">
+        <meta name="description" content="Co-Existent Website" />
         <meta property="description" content="co-existent.png" />
         <link rel="stylesheet" href="styling.css" />
     </head>
