--- a/synthstarting.html
+++ b/synthstarting.html
@@ -9,11 +9,11 @@
         <header class="main-header">
             <nav class="nav main-nav">
                 <ul>
-                   <h3><li><a href="about.html">About Synth</a></li></h3>
-                   <h3><li><a href="Howtouse.html">How To Use</a></li></h3>
-                   <h3><li><a href="https://discord.gg/XD5bP9t7Mk">Discord</a></li></h3>
+                    <h1>Welcome To Synths Wiki</h1>
+                    <button href="https://discord.com/api/oauth2/authorize?client_id=940163209011277874&permissions=8&scope=bot">Invite Synth To Your Server!</button>
+                    <h3><li><a href="about.html">About Synth</a></li></h3>
+                    <h3><li><a href="Howtouse.html">How To Use</a></li></h3>
+                    <h3><li><a href="https://discord.gg/XD5bP9t7Mk">Discord</a></li></h3>
                 </ul>
             </nav>
-            <h1 class="h1text">Select Where You Would Like To Go</h1>
-          <img src="Synth.jpg">
         </header>
