--- a/synthstarting.html
+++ b/synthstarting.html
@@ -10,7 +10,7 @@
             <nav class="nav main-nav">
                 <ul>
                     <h1>Welcome To Synths Wiki</h1>
-                    <button a href="https://discord.com/api/oauth2/authorize?client_id=940163209011277874&permissions=8&scope=bot">Invite Synth To Your Server!</button>
+                    <h3><li><a href="https://discord.com/api/oauth2/authorize?client_id=940163209011277874&permissions=8&scope=bot">Invite Synth To Your Server!</a></li></h3>
                     <h3><li><a href="about.html">About Synth</a></li></h3>
                     <h3><li><a href="Howtouse.html">How To Use</a></li></h3>
                     <h3><li><a href="https://discord.gg/XD5bP9t7Mk">Discord</a></li></h3>
