--- a/synthstarting.html
+++ b/synthstarting.html
@@ -10,8 +10,11 @@
             <nav class="nav main-nav">
                 <ul>
                     <h1>Synth</h1>
-                    <h3><li><a href="https://dsc.lol/synth8614">Invite Synth To Your Server!</a></li></h3>
-                    <h3><li><a href="https://dsc.gg/synthslab">Synths Discord</a></li></h3>
+                    <h3><button><a href="https://dsc.lol/synth8614">Invite Synth To Your Server!</a></button></h3>
+                    <h3><button><a href="https://dsc.gg/synthslab">Synths Discord</a></button></h3>
                 </ul>
             </nav>
         </header>
+        <footer>
+        <hr>
+        <h4><li><a href="about.html">«Next Page»</a></li></h4>
