--- a/synthstarting.html
+++ b/synthstarting.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <title>Where Would You Like To Go?</title>
+        <title>Synth Dashboard || Join Synths Server || Invite Synth</title>
         <meta name="description" content="Stating page for synth">
         <link rel="stylesheet" href="stylesynth.css" />
     </head>
@@ -10,8 +10,10 @@
             <nav class="nav main-nav">
                 <ul>
                     <h1>Synth</h1>
-                    <h3><button><a href="https://dsc.lol/synth8614">Invite Synth To Your Server!</a></button></h3>
-                    <h3><button><a href="https://dsc.gg/synthslab">Synths Discord</a></button></h3>
+                    <img src="unknown.png" href="https://dsc.gg/synthslab">
+                    <h3>↑Join Synths Server↑</h3>
+                    <h3>↓Invite Synth To Your Server↓</h3>
+                    <img src="i8uJt59fyPCE70Oo.gif" href="https://dsc.lol/synth8614">
                 </ul>
             </nav>
         </header>
