--- a/synthstarting.html
+++ b/synthstarting.html
@@ -9,14 +9,15 @@
         <header class="main-header">
             <nav class="nav main-nav">
                 <ul>
-                    <h1>Synth</h1>
+                    <h1>Synths Dashboard</h1>
+                    <hr>
                     <img src="unknown.png" href="https://dsc.gg/synthslab">
-                    <h3>↑Join Synths Server↑</h3>
-                    <h3>↓Invite Synth To Your Server↓</h3>
-                    <img src="i8uJt59fyPCE70Oo.gif" href="https://dsc.lol/synth8614">
+                    <h3>↑ Join Synths Server ↑</h3>
+                    <hr>
+                    <h3>↓ Invite Synth To Your Server ↓</h3>
+                    <img src="standard (2).gif" href="https://dsc.lol/synth8614">
                 </ul>
             </nav>
         </header>
         <footer>
-        <hr>
         <h4><li><a href="about.html">«Next Page»</a></li></h4>
