--- a/synthstarting.html
+++ b/synthstarting.html
@@ -11,11 +11,11 @@
                 <ul>
                     <h1>Synths Dashboard</h1>
                     <hr>
-                    <img src="unknown.png"><a href="https://dsc.gg/synthslab"></a>
+                    <a href="https://dsc.gg/synthslab"><img src="unknown.png"></a>
                     <h3>↑ Join Synths Server ↑</h3>
                     <hr>
                     <h3>↓ Invite Synth To Your Server ↓</h3>
-                    <img src="standard (2).gif"><a href="https://dsc.lol/synth8614"></a>
+                    <a href="https://dsc.lol/synth8614"><img src="standard (2).gif"></a>
                 </ul>
             </nav>
         </header>
